k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: viberater-backend
  namespace: viberater
  labels:
    app: viberater-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: viberater-backend
      app.kubernetes.io/name: viberater
      app.kubernetes.io/version: '2.0'
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: viberater-backend
        app.kubernetes.io/name: viberater
        app.kubernetes.io/version: '2.0'
    spec:
      volumes:
        - name: storage
          persistentVolumeClaim:
            claimName: backend-storage-pvc
        - name: logs
          emptyDir: {}
      containers:
        - resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 250m
              memory: 256Mi
          readinessProbe:
            httpGet:
              path: /health
              port: 3000
              scheme: HTTP
            initialDelaySeconds: 10
            timeoutSeconds: 3
            periodSeconds: 5
            successThreshold: 1
            failureThreshold: 3
          terminationMessagePath: /dev/termination-log
          name: backend
          livenessProbe:
            httpGet:
              path: /health
              port: 3000
              scheme: HTTP
            initialDelaySeconds: 30
            timeoutSeconds: 5
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
          imagePullPolicy: Always
          volumeMounts:
            - name: storage
              mountPath: /app/storage
            - name: logs
              mountPath: /app/logs
          terminationMessagePolicy: File
          image: '10.10.20.6:5000/nmerrett/viberater-backend:latest'
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: Recreate
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
