k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: viberater-backend
  name: viberater-backend
  namespace: viberater
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: http
    port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: viberater-backend
  sessionAffinity: None
  type: ClusterIP
