k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: viberater-frontend
  name: viberater-frontend
  namespace: viberater
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: viberater-frontend
  sessionAffinity: None
  type: ClusterIP
